[gd_scene load_steps=11 format=2]

[ext_resource path="res://InputOutput/InputOutput.gd" type="Script" id=1]
[ext_resource path="res://Accessories/art/input_no_connection.png" type="Texture" id=2]
[ext_resource path="res://Accessories/art/default_no_connection.png" type="Texture" id=3]
[ext_resource path="res://Accessories/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, -50, -14, 0, 14, 0 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12.5319, 8.15518 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 4 )

[node name="InputOutput" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -940, -140 )
script = ExtResource( 1 )

[node name="StartInputArea" type="Area2D" parent="."]
input_pickable = false

[node name="Sprite" type="Sprite" parent="StartInputArea"]
position = Vector2( 370, 200 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartInputArea"]
position = Vector2( 370, 210 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="FinishInputArea" type="Area2D" parent="."]
input_pickable = false

[node name="Sprite" type="Sprite" parent="FinishInputArea"]
position = Vector2( 1500, 474.344 )
scale = Vector2( 0.4, 0.14 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FinishInputArea"]
position = Vector2( 1500, 474 )
shape = SubResource( 2 )

[node name="InputBase" type="ColorRect" parent="."]
margin_left = 20.0
margin_top = 180.0
margin_right = 320.0
margin_bottom = 700.0
color = Color( 0.109804, 0.129412, 0.196078, 1 )

[node name="Input" type="RichTextLabel" parent="InputBase"]
margin_left = 10.0
margin_top = 10.0
margin_right = 290.0
margin_bottom = 510.0
custom_fonts/normal_font = SubResource( 3 )
text = "Entrada:"

[node name="OutputBase" type="ColorRect" parent="."]
margin_left = 1520.0
margin_top = 180.0
margin_right = 1820.0
margin_bottom = 700.0
color = Color( 0.109804, 0.129412, 0.196078, 1 )

[node name="ExpectedOutputTitle" type="RichTextLabel" parent="OutputBase"]
margin_left = 10.0
margin_top = 10.0
margin_right = 290.0
margin_bottom = 50.0
custom_fonts/normal_font = SubResource( 4 )
text = "Saída Esperada:"

[node name="ExpectedOutput" type="RichTextLabel" parent="OutputBase"]
margin_left = 10.0
margin_top = 50.0
margin_right = 290.0
margin_bottom = 250.0
custom_fonts/normal_font = SubResource( 3 )

[node name="PlayerOutputTitle" type="RichTextLabel" parent="OutputBase"]
margin_left = 10.0
margin_top = 270.0
margin_right = 290.0
margin_bottom = 310.0
custom_fonts/normal_font = SubResource( 5 )
text = "Sua Saída:"

[node name="PlayerOutput" type="RichTextLabel" parent="OutputBase"]
margin_left = 10.0
margin_top = 310.0
margin_right = 290.0
margin_bottom = 510.0
custom_fonts/normal_font = SubResource( 6 )
[connection signal="area_entered" from="StartInputArea" to="." method="_on_StartInputArea_area_entered"]
[connection signal="area_exited" from="StartInputArea" to="." method="_on_StartInputArea_area_exited"]
[connection signal="area_entered" from="FinishInputArea" to="." method="_on_FinishInputArea_area_entered"]
[connection signal="area_exited" from="FinishInputArea" to="." method="_on_FinishInputArea_area_exited"]
